# vaser

./: .readthedocs.yaml  Pipfile  README.md  get_wheel_version.py  hatch.toml  lint  pyproject.toml
docs/: api.rst  cli.rst  conf.py  format.rst  index.rst
scripts/: build_docs.sh
test/: common.py  test.py  test_auto_split.py  test_basic.py  test_cli.py  test_max_val.py  test_vaserbin.py
vaser/: __init__.py  __main__.py  cli.py
