[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "vaser"
dynamic = ["version"]
authors = [
  { name="Sebastien Riou", email="" },
]
description = "Python package for variable arguments serialization"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pysatl>=1.2.6",
]
[project.optional-dependencies]
doc = [
  "sphinx",
  "pytest",
  "ruff"
]
[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[project.scripts]
vaser = "vaser:main"

[tool.black]
target-version = ["py312"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Ignore McCabe complexity
  "C901",
  # All wildcard imports 
  "F403","F405",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT001", "FBT003",
  # Allow lower case and upper case for class names, variables, arguments...
  "N801", "N803", "N806", 
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  #below are those that we would like to deal with in the long term
  "UP031", # replace % by fstring
  "RUF013", #PEP 484 prohibits implicit `Optional`
  "S101",#S101 Use of `assert` detected
  "E501", #Line too long (130 > 120)
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]
exclude = ["doc","test","dist"]

[tool.ruff.lint.isort]
known-first-party = ["pqsign"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use relative imports and assertions and print
"test/**/*" = ["TID252", "S101", "T201","F401"]
"testit.py" = ["F401"]
# CLI can print
"vaser/cli.py" = ["T201"]
"vaser/__init__.py" = ["T201","I001"]
"get_wheel_version.py" = ["T201"]

[tool.mypy]
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.coverage.run]
source_pkgs = ["vaser", "test"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
vaser = ["vaser", "*/vaser/vaser"]
test = ["test", "*/vaser/test"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

